--- a/www/package.json
+++ b/www/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.3.2",
     "axios": "^1.3.4",
     "highlight.js": "^11.7.0",
+    "markdown-it": "^13.0.1",
     "marked": "^4.3.0",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
@@ -25,6 +26,7 @@
     "scss": "^0.2.4"
   },
   "devDependencies": {
+    "@types/markdown-it": "^12.2.3",
     "@types/marked": "^4.0.8",
     "@types/node": "^18.15.5",
     "@types/nprogress": "^0.2.0",
