--- a/www/package.json
+++ b/www/package.json
@@ -16,6 +16,7 @@
     "markdown-it": "^13.0.1",
     "marked": "^4.3.0",
     "nprogress": "^0.2.0",
+    "qrcode": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.6",
