--- a/www/package.json
+++ b/www/package.json
@@ -12,10 +12,12 @@
     "@ant-design/icons": "^5.0.1",
     "antd": "^5.3.2",
     "axios": "^1.3.4",
+    "gpt-3-encoder": "^1.1.4",
     "highlight.js": "^11.7.0",
     "markdown-it": "^13.0.1",
     "marked": "^4.3.0",
     "nprogress": "^0.2.0",
+    "path-browserify": "^1.0.1",
     "qrcode": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -31,6 +33,7 @@
     "@types/marked": "^4.0.8",
     "@types/node": "^18.15.5",
     "@types/nprogress": "^0.2.0",
+    "@types/path-browserify": "^1.0.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
